methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:4: error: ')' expected but ';' found.
    while(isFacingTrails==true ; estSurBiscuit==false){
                               ^SlugHunting:4: error: ';' expected but ')' found.
    while(isFacingTrails==true ; estSurBiscuit==false){
                                                     ^